--- a/game/Game.csproj
+++ b/game/Game.csproj
@@ -12,6 +12,10 @@
 		<None Update="assets\**">
 			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 		</None>
+
+		<None Update="../Starry.NET\stl\**">
+			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		</None>
 	</ItemGroup>
 
 	<ItemGroup>
