--- a/starry.net/Starry.NET.csproj
+++ b/starry.net/Starry.NET.csproj
@@ -13,4 +13,9 @@
     <PackageReference Include="Raylib-cs" Version="7.0.1" />
   </ItemGroup>
 
+	<ItemGroup>
+		<None Update="stl\**">
+			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		</None>
+	</ItemGroup>
 </Project>
