FORGOT TO MAKE SAVING WORK

--- a/game/Game.csproj
+++ b/game/Game.csproj
@@ -6,7 +6,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
 	<PublishTrimmed>true</PublishTrimmed>
-	<PublishAot>true</PublishAot>
+	<PublishAot>false</PublishAot>
   </PropertyGroup>
 	
 	<ItemGroup>
